# mrs_computer_vision_examples

./: CHANGELOG.rst  CMakeLists.txt  README.md  nodelets.xml  package.xml  plugins.xml
config/: default.yaml  uav.yaml
config/uav/: uav.yaml
cpp/edge_detector/: CMakeLists.txt  README.md  nodelets.xml  package.xml
cpp/edge_detector/launch/: edge_detector.launch
cpp/edge_detector/src/: edge_detector.cpp
include/: EdgeDetect.h
include/vision_example/: EdgeDetect.h
launch/: edge_detector.launch  pc_camera_projector.launch  vision_example.launch
launch/simulation/: simulation.launch
launch/uav/: uav.launch
python/blob_detector/: CMakeLists.txt  README.md  package.xml
python/blob_detector/launch/: blob_detector.launch
python/blob_detector/scripts/: blob_detector.py
python/blob_detector/tmux/: layout.json  session.yml
src/: EdgeDetect.cpp  edge_detector.cpp  pc_camera_projector.cpp
tmux/: session.yml
